@@ -1,3 +1,8 @@
+2009-04-01  Joel Brobecker  <brobecker@adacore.com>
+
+	* linux-nat.c (linux_nat_filter_events): Do not delete the lwp if
+	this is the last one.
+
 2009-04-01  Pedro Alves  <pedro@codesourcery.com>
 
 	* remote.c (append_resumption): New.
